--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native-device-info": "^8.1.0",
     "react-native-dropdown-picker": "^4.0.2",
     "react-native-elements": "^3.3.2",
+    "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-google-signin": "^2.1.1",
     "react-native-image-crop-picker": "^0.26.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-multiple-select": "^0.5.6",
@@ -37,11 +39,11 @@
     "react-native-screens": "^2.18.1",
     "react-native-select-multiple": "^2.1.0",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-webview": "^11.4.2",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.0",
     "react-navigation-stack": "^2.10.4",
-    "react-navigation-tabs": "^2.6.0",
-    "react-native-webview": "^11.4.2"
+    "react-navigation-tabs": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
